--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.5.17"
+    "amazon-cognito-identity-js": "^6.3.15",
+    "aws-amplify": "^6.15.3",
+    "oidc-client-ts": "^3.3.0",
+    "vue": "^3.5.17",
+    "vue-router": "^4.5.1",
+    "vue3-oidc": "^1.0.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.0",
